# NoiseSuppressionAndroid

./: LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/aiyaapp/mynoisesuppression/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
webrtc_ns/: CMakeLists.txt  build.gradle
webrtc_ns/src/main/: AndroidManifest.xml
webrtc_ns/src/main/cpp/: noise_suppression_jni.c
webrtc_ns/src/main/java/com/aiyaapp/webrtc/ns/: WebRTCNoiseSuppression.java
webrtc_ns/src/main/res/values/: strings.xml
